--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbae-nav li a{
+  font-size: 17px;
+}
+.navbar-brand{
+  letter-spacing: 3px;
+}
+
+.card{
+  transition: all 0.5s ease;
+}
+
+.card:hover{
+  transform: scale(1.1);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+img.aboutimage {width: 323px;margin-top: 78px;}
+
+.product{
+  transition: all 0.5s ease;
+}
+
+.product:hover{
+  transform: scale(1.1);
+  
+}
